Revert "Employee crud"
This reverts commit ab7ccee5bd5f1db7102939fe8231d0c56ca2c63d.

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -3,9 +3,8 @@
   "host": "localhost",
   "port": 5432,
   "username": "postgres",
-  "password": "@lex2244",
+  "password": "postgres",
   "database": "subito",
   "entities": ["src/**/**.entity{.ts,.js}"],
-  "autoSchemaSync": true,
-  "synchronize": true
+  "autoSchemaSync": true
 }
