--- a/ormconfig.json
+++ b/ormconfig.json
@@ -6,5 +6,6 @@
   "password": "postgres",
   "database": "subito",
   "entities": ["src/**/**.entity{.ts,.js}"],
-  "autoSchemaSync": true
+  "autoSchemaSync": true,
+  "synchronize": true
 }
