--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@nestjs/common": "^5.4.0",
     "@nestjs/core": "^5.4.0",
     "@nestjs/typeorm": "^5.2.2",
+    "class-transformer": "^0.2.0",
+    "class-validator": "^0.9.1",
     "pg": "^7.8.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
