--- a/ormconfig.json
+++ b/ormconfig.json
@@ -7,5 +7,8 @@
   "database": "subito",
   "entities": ["src/**/**.entity{.ts,.js}"],
   "autoSchemaSync": true,
-  "synchronize": true
+  "synchronize": true,
+  "logging": "all",
+  "logger": "file",
+  "maxQueryExecutionTime": 1000
 }
