--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "lib": ["dom", "esnext"]
+    "lib": ["dom", "esnext"],
+    "plugins": [{ "name": "typescript-tslint-plugin" , "configFile": "./tslint.json"}],
   },
   "exclude": ["node_modules"]
 }
